# analytics_prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled.ipynb  libs.sh  requirements.txt  system_info.h.in  templates.sql
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
bench/: CMakeLists.txt  bloom_filter_bench.cpp  detail_bench.cpp  embedding_bench.cpp  q1_bench.cpp
bench/bench_util/: tcph_creates.h
job_light_full_workload32/: full.toml  gen_best_opt.py  workload.toml
job_light_full_workload64/: gen_best_opt.py  scans.toml  workload.toml
job_light_workload/: .gitignore  gen_best_opt.py  join1.toml  training_queries.toml  workload.toml
job_light_workload32/: gen_best_opt.py  join1.toml  schema.sql  workload.toml
motivation_results/: results.txt
motivation_workload/: gen_best_opt.py  join1.toml  load.sql  testing_queries.toml  workload.toml
sample_workload/: gen_best_opt.py  gen_sample_data.py  join_queries.toml  scan_queries.toml  test_joins1.toml  test_joins2.toml  test_joins3.toml  test_scans.toml  workload.toml
sample_workload_data/: buffer_info.db0
src/: main.cpp
src/common/: catalog.cpp  date_type.cpp  type.cpp
src/execution/: execution_factory.cpp  filter.cpp  vector_projection.cpp
src/execution/executors/: build_rowid_index_executor.cpp  expr_executor.cpp  hash_aggr_executor.cpp  hash_join_executor.cpp  materializer_executor.cpp  plan_executor.cpp  projection_executor.cpp  rowid_index_join_executor.cpp  scalar_hash_join.cpp  scan_executor.cpp  sort_executor.cpp  static_aggr_executor.cpp
src/execution/nodes/: scan_node.cpp
src/execution/vector_ops/: binary_arith.cpp  binary_comp.cpp  copy.cpp  expr.cpp  gather.cpp  hashing.cpp  init.cpp  read_block.cpp  reduce.cpp  scatter.cpp  select.cpp  sort.cpp
src/include/common/: catalog.h  date_type.h  info_store.h  settings.h  types.h  util.h
src/include/execution/: bloom_filter.h  execution_common.h  execution_context.h  execution_factory.h  execution_types.h  filter.h  ops.h  vector_ops.h  vector_projection.h
src/include/execution/executors/: build_rowid_index_executor.h  expr_executor.h  hash_aggr_executor.h  hash_join_executor.h  materializer_executor.h  plan_executor.h  projection_executor.h  rowid_index_join_executor.h  scalar_hash_join_executor.h  scan_executor.h  sort_executor.h  static_aggr_executor.h
src/include/execution/nodes/: build_rowid_index_node.h  expr_node.h  hash_aggr_node.h  hash_join_node.h  materializer_node.h  plan_node.h  projection_node.h  rowid_index_join_node.h  scan_node.h  sort_node.h  static_aggregation.h
src/include/optimizer/: default.h  histogram.h  indexes.h  logical_nodes.h  materialized_views.h  smartids.h  statistics.h  table_statistics.h  to_physical.h  workload_metadata.h  workload_reader.h
src/include/stats/: embedder.h  histogram.h  schema_graph.h  table_stats.h
src/include/storage/: buffer_manager.h  dict_encoding.h  filter.h  index.h  table.h  table_block.h  table_loader.h  vector.h  vector_projection.h
src/include/trees/: training.h  tree.h  tree_set.h
src/optimizer/: default.cpp  histogram.cpp  indexes.cpp  materialized_views.cpp  smartids.cpp  statistics.cpp  table_statistics.cpp  to_physical.cpp  workload_metadata.cpp  workload_reader.cpp
src/stats/: embedder.cpp  histogram.cpp  schema_graph.cpp  table_stats.cpp
src/storage/: buffer_manager.cpp  dict_endoding.cpp  filter.cpp  index.cpp  table.cpp  table_block.cpp  table_loader.cpp  vector.cpp  vector_projection.cpp
synthetic_workload/: gen_best_opt.py  gen_synthetic.py  join1.toml  workload.toml
test/: CMakeLists.txt  executor_stats_test.cpp  filter_repr_test.cpp  histogram_test.cpp  job_light_test.cpp  schema_graph_test.cpp  sort_test.cpp  table_loader_test.cpp  vector_ops_int_test.cpp
test/execution/: CMakeLists.txt  aggregate_test.cpp  embedding_test.cpp  hash_join_test.cpp  index_test.cpp  materializer_test.cpp  param_test.cpp  scan_test.cpp  stats_collector_test.cpp  tpch_embedding_test.cpp  tpch_test.cpp  usage_test.cpp
test/storage/: CMakeLists.txt
test/test_util/: essai.cpp  test_table_info.h
tpch_data/: embedding_bench_err.txt  gen_test.py  gen_tpch.sh  tpch_test.py  workload.toml
